// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Button" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <button
    className="css-oxpnoh-Button"
  >
    Button
  </button>
</div>
`;

exports[`"Button" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <button
    className="css-oxpnoh-Button"
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders as block 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <button
    className="css-1vnruwz-Button"
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders in loading state 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <button
    className="css-oxpnoh-Button"
  >
    <svg
      fill="none"
      height={30}
      strokeWidth="3"
      style={
        {
          "display": "flex",
          "margin": "auto",
        }
      }
      viewBox="0 0 43 43"
      width={30}
    >
      <circle
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="rgba(255, 255, 255, 0.07999999999999996)"
      />
      <circle
        className="css-1ov5q7j-Loading"
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="#fff"
        strokeDasharray={125.68}
        strokeLinecap="round"
      />
    </svg>
  </button>
</div>
`;

exports[`"Button" renders when disabled 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <button
    className="css-18l2jnr-Button"
    disabled={true}
  >
    Submit
  </button>
</div>
`;
